fix: No confusing scrollbar on loading

--- a/portfolio-style.css
+++ b/portfolio-style.css
@@ -34,6 +34,8 @@ body {
   padding: 0;
 
   min-height: 100dvh;
+
+  overflow-y: hidden;
 }
 
 .background {
